1.21.11 remap to official mapping