@@ -1,22 +1,16 @@
 package com.rimo.sfcr;
 
-import com.rimo.sfcr.mixin.WorldRendererAccessor;
+import com.rimo.sfcr.mixin.LevelRendererAccessor;
 import com.seibel.distanthorizons.api.DhApi;
 import com.seibel.distanthorizons.api.enums.rendering.EDhApiBlockMaterial;
 import com.seibel.distanthorizons.api.interfaces.render.IDhApiCustomRenderRegister;
 import com.seibel.distanthorizons.api.interfaces.render.IDhApiRenderableBoxGroup;
-//import com.seibel.distanthorizons.api.objects.data.DhApiTerrainDataPoint;
 import com.seibel.distanthorizons.api.objects.math.DhApiVec3d;
 import com.seibel.distanthorizons.api.objects.render.DhApiRenderableBox;
 import com.seibel.distanthorizons.api.objects.render.DhApiRenderableBoxGroupShading;
-import net.minecraft.client.MinecraftClient;
-import net.minecraft.client.render.RenderTickCounter;
-import net.minecraft.client.world.ClientWorld;
-//import net.minecraft.registry.entry.RegistryEntry;
-//import net.minecraft.util.math.BlockPos;
-import net.minecraft.util.math.Vec3d;
-//import net.minecraft.world.World;
-//import net.minecraft.world.biome.Biome;
+import net.minecraft.client.DeltaTracker;
+import net.minecraft.client.Minecraft;
+import net.minecraft.world.phys.Vec3;
 
 import java.awt.*;
 import java.util.ArrayList;
@@ -241,12 +235,12 @@ public class RendererDHCompat extends Renderer{
 
 	//to calc RenderableBoxGroup pos and culling, etc..
 	private void preRender(IDhApiRenderableBoxGroup group) {
-		Vec3d cameraPos = MinecraftClient.getInstance().gameRenderer.getCamera().getPos();
-		RenderTickCounter tickCounter = MinecraftClient.getInstance().getRenderTickCounter();
+		Vec3 cameraPos = Minecraft.getInstance().gameRenderer.getMainCamera().position();
+		DeltaTracker tickCounter = Minecraft.getInstance().getDeltaTracker();
 
 		//pos calc copy from net.minecraft.client.render.WorldRenderer
-		float cloudPhase = tickCounter.getTickProgress(false)
-				+ (float)((WorldRendererAccessor)MinecraftClient.getInstance().worldRenderer).getTicks();
+		float cloudPhase = tickCounter.getGameTimeDeltaPartialTick(false)
+				+ (float)((LevelRendererAccessor)Minecraft.getInstance().levelRenderer).getTicks();
 		double x = cameraPos.x + (double)(cloudPhase * 0.030000001F);
 		double z = cameraPos.z + 3.9600000381469727;
 		double y = getCloudHeight();
@@ -259,16 +253,16 @@ public class RendererDHCompat extends Renderer{
 		 */
 
 		//color
-		ClientWorld world = MinecraftClient.getInstance().world;
-		if (world != null && !group.isEmpty()) {
-			int iColor = world.getCloudsColor(tickCounter.getTickProgress(false));
-			Color color = new Color(iColor);
-			if (!group.get(0).color.equals(color)) {
-				for (DhApiRenderableBox box : group)
-					box.color = color;
-				group.triggerBoxChange();
-			}
-		}
+//		ClientLevel world = Minecraft.getInstance().level;
+//		if (world != null && !group.isEmpty()) {
+//			int iColor = world.getCloudsColor(tickCounter.getGameTimeDeltaPartialTick(false));
+//			Color color = new Color(iColor);
+//			if (!group.getFirst().color.equals(color)) {
+//				for (DhApiRenderableBox box : group)
+//					box.color = color;
+//				group.triggerBoxChange();
+//			}
+//		}
 
 		group.setOriginBlockPos(new DhApiVec3d(-x, y, -z));
 	}
